<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTriangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_triangle"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etTriangleA"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/first_side_triangle"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etTriangleB"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/second_side_triangle"
        android:layout_marginHorizontal="50dp"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etTriangleC"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/third_side_triangle"
        android:layout_marginHorizontal="50dp"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tvRectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_rectangle"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etRectangleA"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/width_rectangle"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etRectangleB"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/height_rectangle"
        android:layout_marginHorizontal="50dp"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tvResultTriangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:text=""
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/tvResultRectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:text=""
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit"
        android:backgroundTint="@color/black"
        android:layout_marginHorizontal="50dp"
        android:textSize="20sp"
        tools:ignore="TextViewEdits" />
</LinearLayout>